--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>五十音冒險 Ver 3.4.7</title>
+    <title>五十音冒險 Ver 3.4.8</title>
     <style>
         :root { --pink: #FFD1DC; --blue: #BFEAF2; --yellow: #FFF4BD; --text: #5d4037; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; font-family: sans-serif; }
@@ -37,21 +37,23 @@
         .quiz-audio-btn:active { transform: scale(0.9); }
 
         .item-grid { display: grid; gap: 10px; width: 95%; max-width: 800px; padding: 10px; }
-        .grid-study { grid-template-columns: repeat(2, 1fr); }
+        
+        /* 核心修改：認識模式改為 3 欄 */
+        .grid-study { grid-template-columns: repeat(3, 1fr); } 
         .grid-quiz { grid-template-columns: repeat(2, 1fr); }
 
-        /* 認識練習卡片樣式 */
         .game-item.study { 
             display: flex; flex-direction: column; align-items: center; 
-            padding: 10px; border-color: var(--pink); box-shadow: 0 4px 0 var(--pink);
+            padding: 8px; border-color: var(--pink); box-shadow: 0 4px 0 var(--pink);
         }
-        .study-img { width: 100%; max-width: 150px; border-radius: 8px; margin-bottom: 8px; }
-        .study-kana { font-size: 2.5rem; font-weight: bold; color: var(--text); }
-        .study-roma { font-size: 1rem; color: #999; }
+        /* 縮小圖片以符合三欄排版 */
+        .study-img { width: 100%; max-width: 110px; border-radius: 6px; margin-bottom: 5px; }
+        .study-kana { font-size: 1.8rem; font-weight: bold; color: var(--text); }
+        .study-roma { font-size: 0.8rem; color: #999; }
 
         .game-item {
             background: white; border-radius: 12px; border: 3px solid var(--blue);
-            padding: 20px 5px; text-align: center; font-size: 1.8rem;
+            padding: 15px 5px; text-align: center; font-size: 1.8rem;
             font-weight: bold; color: var(--text); box-shadow: 0 4px 0 var(--blue);
             transition: transform 0.1s; cursor: pointer;
         }
@@ -67,7 +69,6 @@
             30% { opacity: 1; transform: translate(-50%, -50%) scale(1.1); }
             100% { opacity: 0; transform: translate(-50%, -50%) scale(1.1); }
         }
-        /* 版本號標籤 */
         .version-tag { position: fixed; bottom: 5px; right: 10px; font-size: 10px; opacity: 0.4; }
     </style>
 </head>
@@ -88,7 +89,7 @@
 
     <div id="main-stage"></div>
     <div id="feedback"></div>
-    <div class="version-tag">Ver. 3.4.7</div>
+    <div class="version-tag">Ver. 3.4.8</div>
 
     <script>
         const kanaData = {
